--- a/index.html
+++ b/index.html
@@ -146,20 +146,20 @@
     <button id="paramReturnBtn">Return to Main Menu</button>
   </div>
 </div>
-
+<!-- rbc calculation -->
 <div id="rbcCalcScreen" class="screen" >
   <div class="rbc-calculator">
       <label for="SBOD">1st Stage SBOD assumption</label>
       <input type="number" id="SBOD" placeholder="enter here" required><br>
       
       <label for="flowrate">Flowrate</label>
-      <input type="number" id="flowrate" placeholder="enter here" required><br>
+      <input type="number" id="flowrate" placeholder="m^3/d" required><br>
 
       <label for="primaryEffluent">SBOD loading Primary Effluent</label>
-      <input type="number" id="primaryEffluent" placeholder="enter here" required><br>
+      <input type="number" id="primaryEffluent" placeholder="g/m^3" required><br>
 
       <label for="secondaryEffluent">SBOD loading Second Effluent</label>
-      <input type="number" id="secondEffluent" placeholder="enter here" required><br>
+      <input type="number" id="secondEffluent" placeholder="g/m^3" required><br>
 
       <label for="Trains">Number of trains</label>
       <input type="number" id="numTrains" placeholder="enter here" required><br>
@@ -168,7 +168,7 @@
       <input type="number" id="numStages" placeholder="enter here" required><br>
 
       <label for="BODEffluent">BOD loading primary effluent</label>
-      <input type="number" id="BODprim" placeholder="enter here" required><br>
+      <input type="number" id="BODprim" placeholder="g/m^3" required><br>
       
       <button id="rbcButton">Calculate</button>
 
