--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
   <div id="tricklingCalcScreen" >
     <div class="trickle-calculator">
       <h1>Trickling Filter</h1>
-      <label for="flowrate">Flow Rate(Q):</label>
-      <input type="number" id="flowrate" required><br>
+      <label for="flow">Flow Rate(Q):</label>
+      <input type="number" id="flow" required><br>
       <label for="bod">BOD Concentration(BOD in g/m³):</label>
       <input type="number" id="bod" required><br>
       <label for="tkn">TKN Concentration (TKN in g/m³):</label>
